src-ken&y/objects/Payment_Match__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <formula>Payment_Line__r.Finalized__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Payment Matches</relationshipLabel>
        <relationshipName>Payment_Matches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Line</label>
        <referenceTo>Payment_Line__c</referenceTo>
        <relationshipLabel>Payment Matches</relationshipLabel>
        <relationshipName>Payment_Matches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Match</label>
    <nameField>
        <label>Payment Match</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>